; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_check.c_check_for_pg_role_prefix.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_check.c_check_for_pg_role_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"template1\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"Checking for roles starting with \22pg_\22\00", align 1
@.str.2 = private unnamed_addr constant [57 x i8] c"SELECT * FROM pg_catalog.pg_roles WHERE rolname ~ '^pg_'\00", align 1
@old_cluster = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [55 x i8] c"The source cluster contains roles starting with \22pg_\22\0A\00", align 1
@.str.4 = private unnamed_addr constant [55 x i8] c"The target cluster contains roles starting with \22pg_\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @check_for_pg_role_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_for_pg_role_prefix(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @connectToServer(i32* %5, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %4, align 8
  %7 = call i32 @prep_status(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @executeQueryOrDie(i32* %8, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.2, i64 0, i64 0))
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @PQntuples(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = icmp eq i32* %14, @old_cluster
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = call i32 @pg_fatal(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.3, i64 0, i64 0))
  br label %20

18:                                               ; preds = %13
  %19 = call i32 @pg_fatal(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.4, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %16
  br label %21

21:                                               ; preds = %20, %1
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @PQclear(i32* %22)
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @PQfinish(i32* %24)
  %26 = call i32 (...) @check_ok()
  ret void
}

declare dso_local i32* @connectToServer(i32*, i8*) #1

declare dso_local i32 @prep_status(i8*) #1

declare dso_local i32* @executeQueryOrDie(i32*, i8*) #1

declare dso_local i64 @PQntuples(i32*) #1

declare dso_local i32 @pg_fatal(i8*) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @PQfinish(i32*) #1

declare dso_local i32 @check_ok(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
